--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,114 +1,120 @@
-:root {
+/**
+ * Based on Adobe Spectrum
+ * https://spectrum.adobe.com/page/color-system/
+ */
+
+body[data-theme="dark"] {
+  /** GLOBAL DESIGN TOKENS */
+  --gray-0:   hsl(0, 0%,  0%);
+  --gray-50:  hsl(0, 0%,  5%);
+  --gray-75:  hsl(0, 0%, 10%);
+  --gray-100: hsl(0, 0%, 15%); /* Default background color */
+  --gray-200: hsl(0, 0%, 25%); /* Decorative borders */
+  --gray-300: hsl(0, 0%, 34%); /* Decorative borders */
+  --gray-400: hsl(0, 0%, 43%); /* Field border */
+  --gray-500: hsl(0, 0%, 52%); /* Disabled text */
+  --gray-600: hsl(0, 0%, 61%); /* Control border */
+  --gray-700: hsl(0, 0%, 70%); /* Subdued text */
+  --gray-800: hsl(0, 0%, 80%); /* Text */
+  --gray-900: hsl(0, 0%, 90%); /* Heading */
+
+  /** ALIAS DESIGN TOKENS */
+  --page-background: /* Light source from above: gradient is light (top) to dark (bottom) */
+      radial-gradient(circle at 50% 0%, var(--gray-300), transparent),
+      linear-gradient(to bottom, var(--gray-200), var(--gray-50));
+  --game-border-color: /* Always darker than game background */
+      var(--gray-0);
+  --game-box-shadow: /* Always darker than game background */
+      0 0 5rem 0 var(--gray-75);
+  --reset-button-hover-shadow: /* Always darker than button background */
+      0 0 0.5rem 0 var(--gray-0);
+  --winning-square-background-color:
+      var(--gray-200);
+
+  /** PAGE BORDER */
+  --border-r: 100;
+  --border-g: 150;
+  --border-b: 255;
+  --border-alpha1: 1;   /* Outside */
+  --border-alpha2: 0.35;
+  --border-alpha3: 0.3; /* Inside */
+
+  --gutter: 0.5rem;
+  --body-box-shadow-width: 10px;
+}
+
+
+
+body[data-theme="light"] {
+  /** GLOBAL DESIGN TOKENS */
+  --gray-0:   hsl(0, 0%, 100%);
+  --gray-50:  hsl(0, 0%,  98%);
+  --gray-75:  hsl(0, 0%,  97%);
+  --gray-100: hsl(0, 0%,  96%); /* Default background color */
+  --gray-200: hsl(0, 0%,  88%); /* Decorative borders */
+  --gray-300: hsl(0, 0%,  81%); /* Decorative borders */
+  --gray-400: hsl(0, 0%,  68%); /* Field border */
+  --gray-500: hsl(0, 0%,  54%); /* Disabled text */
+  --gray-600: hsl(0, 0%,  42%); /* Control border */
+  --gray-700: hsl(0, 0%,  30%); /* Subdued text */
+  --gray-800: hsl(0, 0%,  18%); /* Text */
+  --gray-900: hsl(0, 0%,   6%); /* Heading */
+
+  /** ALIAS DESIGN TOKENS */
+  --page-background: /* Light source from above: gradient is light (top) to dark (bottom) */
+      radial-gradient(circle at 50% 0%, var(--gray-0), transparent),
+      linear-gradient(to bottom, var(--gray-0), var(--gray-400));
+  --game-border-color: /* Always darker than game background */
+      var(--gray-400);
+  --game-box-shadow: /* Always darker than game background */
+      0 0 10rem -1rem var(--gray-500);
+  --reset-button-hover-shadow: /* Always darker than button background */
+      0 0 0.25rem 0 var(--gray-400);
+  --winning-square-background-color:
+      var(--gray-200);
+  
+  /** PAGE BORDER */
   --border-r: 100;
   --border-g: 150;
   --border-b: 200;
+  --border-alpha1: 1;   /* Outside */
+  --border-alpha2: 0.35;
+  --border-alpha3: 0.3; /* Inside */
 
   --gutter: 0.5rem;
-  --body-box-shadow-width: 10px;  /* Manually update this */
+  --body-box-shadow-width: 10px;
 }
 
-html, body {margin: 0; padding: 0;}
+/* :root {
+  
+} */
 
+html,
 body {
-  display: flex;
-  align-items: center;
-  /*align-content: center;*/
-  justify-content: center;
-  box-sizing: border-box;
-  font-family: sans-serif;
-  padding: calc(var(--gutter) + 10px); /* box-shadow is 10px inset */
-  color: hsl(0, 0%, 75%);
-  height: 100vh;
-  max-height: 100vh;
-  max-width: 100%;
-  background:
-    radial-gradient(circle at 50% 0%, hsl(0, 0%, 30%), transparent),
-    linear-gradient(to bottom, hsl(0, 0%, 20%), black);
-  box-shadow:
-    inset 0 0 0 2px rgb(var(--border-r), var(--border-g), var(--border-b), 1),
-    inset 0 0 0 6px rgb(var(--border-r), var(--border-g), var(--border-b), 0.35),
-    inset 0 0 0 10px rgb(var(--border-r), var(--border-g), var(--border-b), 0.3);
-}
-
-.ttt {
-  display: grid;
-  grid: 1fr / 1fr;
-  grid-gap: calc(2 * var(--gutter));
-}
-
-.ttt__action {
-  display: grid;
-  align-items: center;
-}
-.ttt__board {
-  display: grid;
-  grid: 1fr 1fr 1fr / 1fr 1fr 1fr;
-  grid-gap: var(--gutter);
-  background: white;
-  box-sizing: border-box;
-  /*width: var(--content-width);*/
-  /*height: var(--content-width);*/
-  padding: var(--gutter);
-  border: 2px solid steelblue;
-  border-radius: 4px;
-  box-shadow: 3px 3px 0 teal;
-}
-
-button {
-  border: none;
   margin: 0;
   padding: 0;
-  min-height: calc(100vw / 4);
-  min-width: calc(100vw / 4);
-  text-decoration: none;
-  background: steelblue;
-  color: white;
-  font-family: sans-serif;
-  font-size: 1.5rem;
-  line-height: 1;
-  cursor: pointer;
-  text-align: center;
-  transition: background 250ms ease-in-out, transform 150ms ease;
-  -webkit-appearance: none;
-  -moz-appearance: none;
 }
 
-#board button {
-  background: lightsteelblue;
+body {
+  color: var(--gray-900);
+  background: var(--page-background);
+  font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  
+  padding: calc(var(--gutter) + 10px);
+  height: 100vh; /* Fallback for Chrome */
+  height: 100dvh;
+  max-height: 100vh; /* Fallback for Chrome */
+  max-height: 100dvh;
+  max-width: 100vw; /* Fallback for Chrome */
+  max-width: 100dvw;
+  
+  box-shadow:
+    inset 0 0 0 2px rgb(var(--border-r), var(--border-g), var(--border-b), var(--border-alpha1)),
+    inset 0 0 0 6px rgb(var(--border-r), var(--border-g), var(--border-b), var(--border-alpha2)),
+    inset 0 0 0 10px rgb(var(--border-r), var(--border-g), var(--border-b), var(--border-alpha3));
 }
-
-#board button[data-player="×"] {
-  background: cornflowerblue;
-}
-
-#board button[data-player="o"] {
-  background: teal;
-}
-
-#reset {
-  width: var(--content-width);
-  margin-top: calc(3 * var(--gutter));
-  padding: 0.5rem;
-  box-shadow: 2px 2px 0 lightsteelblue;
-  font-size: 1.5rem;
-  text-transform: uppercase;
-}
-
-/*[style*="--aspect-ratio"] > :first-child {*/
-/*  width: 100%;*/
-/*  position: absolute;*/
-/*  top: 0;*/
-/*  left: 0;*/
-/*  height: 100%;*/
-/*}*/
-
-/*[style*="--aspect-ratio"] {*/
-/*  position: relative;*/
-/*}*/
-
-/*[style*="--aspect-ratio"]::before {*/
-/*  content: "";*/
-/*  display: block;*/
-/*  padding-bottom: calc(100% / (var(--aspect-ratio)));*/
-/*}*/
-
